add searchBySubject, add subject name (WIP)